--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -33,111 +33,201 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     xmlns:style="http://schemas.android.com/apk/res-auto"
     xmlns:opencv="http://schemas.android.com/apk/res-auto"
     tools:context="org.firstinspires.ftc.robotcontroller.internal.FtcRobotControllerActivity"
     android:focusable="true"
     android:id="@+id/entire_screen"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
-  <!-- black bar on top -->
-  <RelativeLayout
-    android:id="@+id/top_bar"
-    android:layout_width="fill_parent"
-    android:layout_height="80dp"
-    android:background="@color/background_black">
-
-    <ImageView
-      android:id="@+id/robotIcon"
-      android:src="@drawable/icon_robotcontroller"
-      android:layout_width="wrap_content"
+  <!-- The first part of the screen (text and header). -->
+  <LinearLayout
+      android:layout_width="0dp"
+      android:layout_weight="1"
       android:layout_height="fill_parent"
-      android:adjustViewBounds="true"
-      android:layout_margin="1dp"/>
+      android:orientation="vertical">
 
-    <TextView
-      android:id="@+id/textDeviceName"
-      android:layout_toEndOf="@id/robotIcon"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textColor="?attr/textWhite"
-      android:textAppearance="?android:attr/textAppearanceMedium"
-      android:padding="8dp"
-      android:textStyle="bold"/>
+    <!-- black bar on top -->
+    <RelativeLayout
+        android:id="@+id/top_bar"
+        android:layout_width="fill_parent"
+        android:layout_height="80dp"
+        android:background="@color/background_black">
 
-    <ImageButton
-      android:id="@+id/menu_buttons"
-      android:scaleType="fitXY"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:src="@drawable/icon_menu"
-      android:background="@android:color/transparent"
-      android:padding="15dp"
-      android:adjustViewBounds="true"
-      android:layout_alignParentEnd="true"
-      android:layout_centerInParent="true"
-      android:layout_centerHorizontal="true"
-      android:layout_margin="10dp"/>
+      <ImageView
+          android:id="@+id/robotIcon"
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:layout_margin="1dp"
+          android:adjustViewBounds="true"
+          android:src="@drawable/icon_robotcontroller" />
 
-  </RelativeLayout>
-  <!-- end of black bar -->
+      <TextView
+          android:id="@+id/textDeviceName"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_toEndOf="@id/robotIcon"
+          android:padding="8dp"
+          android:textAppearance="?android:attr/textAppearanceMedium"
+          android:textColor="?attr/textWhite"
+          android:textStyle="bold" />
 
-  <include layout="@layout/header"
-           android:id="@+id/included_header"/>
+      <ImageButton
+          android:id="@+id/menu_buttons"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignParentEnd="true"
+          android:layout_centerHorizontal="true"
+          android:layout_centerInParent="true"
+          android:layout_margin="10dp"
+          android:adjustViewBounds="true"
+          android:background="@android:color/transparent"
+          android:padding="15dp"
+          android:scaleType="fitXY"
+          android:src="@drawable/icon_menu" />
 
-  <RelativeLayout
-    android:id="@+id/RelativeLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:keepScreenOn="true"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" >
+    </RelativeLayout>
+    <!-- end of black bar -->
 
-    <TextView
-      android:id="@+id/textNetworkConnectionStatus"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:visibility="invisible"
-      android:text="" />
+    <include
+        android:id="@+id/included_header"
+        layout="@layout/header" />
 
-    <TextView
-      android:id="@+id/textRobotStatus"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_below="@+id/textNetworkConnectionStatus"
-      android:visibility="invisible"
-      android:text="" />
+    <!-- Content for the robot controller screen. -->
+    <RelativeLayout
+        android:id="@+id/RelativeLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="250dp"
+        android:keepScreenOn="true"
+        android:paddingBottom="0dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
+        android:paddingTop="0dp">
 
-    <TextView
-      android:id="@+id/textOpMode"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_below="@+id/textRobotStatus"
-      android:visibility="invisible"
-      android:text="" />
+      <!-- The robot status text -->
+      <TextView
+          android:id="@+id/textNetworkConnectionStatus"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text=""
+          android:visibility="invisible" />
 
-    <FrameLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_below="@+id/textOpMode"
-      android:layout_above="@+id/textGamepad1">
+      <TextView
+          android:id="@+id/textRobotStatus"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_below="@+id/textNetworkConnectionStatus"
+          android:text=""
+          android:visibility="invisible" />
 
-      <LinearLayout
-          android:id="@+id/cameraMonitorViewId"
+      <TextView
+          android:id="@+id/textOpMode"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_below="@+id/textRobotStatus"
+          android:text=""
+          android:visibility="invisible" />
+      <!-- -->
+
+      <TextView
+          android:id="@+id/textGamepad1"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_above="@+id/textGamepad2"
+          android:text=""
+          android:visibility="invisible" />
+
+      <TextView
+          android:id="@+id/textGamepad2"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_alignParentBottom="true"
+          android:text=""
+          android:visibility="invisible" />
+
+      <!-- invisible except when programming mode is activated from the DS -->
+      <TextView
+          android:id="@+id/textRemoteProgrammingMode"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:orientation="vertical"
-          />
+          android:background="?attr/backgroundLight"
+          android:gravity="center"
+          android:text=""
+          android:textColor="?attr/textWhite"
+          android:textSize="40sp"
+          android:textStyle="bold"
+          android:visibility="invisible" />
 
-      <!-- When visible, the error message will overlay and thus partially
-           obscure part of the camera monitor. We make this trade off so as to
-           allow for a bigger camera monitor view in the common case when the
-           error is not in fact present
-        -->
+    </RelativeLayout>
+  </LinearLayout>
+
+
+  <!-- The second part of the screen (camera views). -->
+  <LinearLayout
+      android:layout_width="0dp"
+      android:layout_weight="2"
+      android:layout_height="fill_parent"
+      android:orientation="horizontal">
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+      <!-- The frame layout for the OpenCV camera -->
+      <FrameLayout
+          android:layout_height="fill_parent"
+          android:layout_width="fill_parent"
+          android:id="@+id/frameLayout">
+
+        <org.opencv.android.JavaCameraView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:visibility="gone"
+            android:focusable="false"
+            android:id="@+id/show_camera_activity_java_surface_view"
+            opencv:show_fps="true"
+            opencv:camera_id="any" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Grab"
+            android:id="@+id/button3"
+            android:layout_gravity="end|bottom"
+            android:onClick="frameButtonOnClick"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="[RESULT]"
+            android:id="@+id/resultText"
+            android:layout_gravity="end|top"
+            android:textColor="#ff0000" />
+
+      </FrameLayout>
+
+      <!-- The Vuforia camera -->
+      <FrameLayout
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:visibility="invisible">
+
+        <LinearLayout
+            android:id="@+id/cameraMonitorViewId"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:visibility="invisible"
+            />
+
+        <!-- When visible, the error message will overlay and thus partially
+             obscure part of the camera monitor. We make this trade off so as to
+             allow for a bigger camera monitor view in the common case when the
+             error is not in fact present
+          -->
         <TextView style="@style/FtcTextViewStyleBold"
             android:id="@+id/textErrorMessage"
             android:layout_width="match_parent"
@@ -146,72 +236,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
             android:visibility="invisible"
             android:textColor="?attr/textMediumDark" />
 
-    </FrameLayout>
-
-    <TextView
-      android:id="@+id/textGamepad1"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_above="@+id/textGamepad2"
-      android:visibility="invisible"
-      android:text="" />
-
-    <TextView
-      android:id="@+id/textGamepad2"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_alignParentBottom="true"
-      android:visibility="invisible"
-      android:text="" />
-
-    <!-- invisible except when programming mode is activated from the DS -->
-    <TextView
-      android:id="@+id/textRemoteProgrammingMode"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:background="?attr/backgroundLight"
-      android:gravity="center"
-      android:textColor="?attr/textWhite"
-      android:textSize="40sp"
-      android:textStyle="bold"
-      android:visibility="invisible"
-      android:text="" />
-
-    <FrameLayout
-        android:layout_width="fill_parent"
-        android:layout_height="350dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:id="@+id/frameLayout">
-
-      <org.opencv.android.JavaCameraView
-          android:layout_width="fill_parent"
-          android:layout_height="fill_parent"
-          android:visibility="gone"
-          android:id="@+id/show_camera_activity_java_surface_view"
-          opencv:show_fps="true"
-          opencv:camera_id="any" />
-
-      <Button
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="Grab"
-          android:id="@+id/button3"
-          android:layout_gravity="end|bottom"
-          android:onClick="frameButtonOnClick"/>
-
-      <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:textAppearance="?android:attr/textAppearanceSmall"
-          android:text="[RESULT]"
-          android:id="@+id/resultText"
-          android:layout_gravity="end|top"
-          android:textColor="#ff0000" />
-
-    </FrameLayout>
-
-  </RelativeLayout>
+      </FrameLayout>
+    </RelativeLayout>
+  </LinearLayout>
 
   <WebView
     android:id="@+id/webViewBlocksRuntime"
