--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -169,7 +169,8 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       android:layout_width="0dp"
       android:layout_weight="2"
       android:layout_height="fill_parent"
-      android:orientation="horizontal">
+      android:orientation="horizontal"
+      android:background="@color/bright_red">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -204,7 +205,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
-            android:onClick="frameButtonOnClick"
+            android:onClick="grabNewFrame"
             android:text="Grab" />
 
       </FrameLayout>
@@ -212,8 +213,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       <!-- The Vuforia camera -->
       <FrameLayout
           android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
-          android:visibility="invisible">
+          android:layout_height="fill_parent"
+          android:visibility="invisible"
+          android:id="@+id/vuforiaCamParent">
 
         <LinearLayout
             android:id="@+id/cameraMonitorViewId"
