--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -169,8 +169,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       android:layout_width="0dp"
       android:layout_weight="2"
       android:layout_height="fill_parent"
-      android:orientation="horizontal"
-      android:background="@color/bright_red">
+      android:orientation="horizontal">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -214,15 +213,16 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       <FrameLayout
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
-          android:visibility="invisible"
-          android:id="@+id/vuforiaCamParent">
+          android:id="@+id/vuforiaCamParent"
+          android:background="@color/bright_blue">
 
         <LinearLayout
             android:id="@+id/cameraMonitorViewId"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical"
-            android:visibility="invisible"
+            android:visibility="visible"
+            android:background="@color/bright_green"
             />
 
         <!-- When visible, the error message will overlay and thus partially
@@ -235,7 +235,6 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
-            android:visibility="invisible"
             android:textColor="?attr/textMediumDark" />
 
       </FrameLayout>
