--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -74,6 +74,18 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
           android:textColor="?attr/textWhite"
           android:textStyle="bold" />
 
+      <TextView
+          android:id="@+id/openftc_version"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_toEndOf="@+id/robotIcon"
+          android:layout_below="@id/textDeviceName"
+          android:textColor="?attr/textWhite"
+          android:textAppearance="?android:attr/textAppearanceMedium"
+          android:padding="8dp"
+          android:textStyle="bold"
+          tools:text="OpenFTC v1.0" />
+
       <ImageButton
           android:id="@+id/menu_buttons"
           android:layout_width="wrap_content"
