Add functionality to display available preview sizes to use

--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -195,7 +195,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
           android:id="@+id/openCVCam"
           android:visibility="invisible">
 
-        <org.opencv.android.JavaCameraView
+        <hankextensions.vision.opencv.ImprovedJCV
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:visibility="gone"
