--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -195,7 +195,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   <org.opencv.android.JavaCameraView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:visibility="invisible"
+      android:visibility="gone"
       android:focusable="false"
       android:id="@+id/opencvJavaCameraView"
       opencv:show_fps="true"
@@ -206,7 +206,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:id="@+id/vuforiaCamParent"
-      android:visibility="invisible">
+      android:visibility="gone">
 
     <LinearLayout
         android:id="@+id/vuforiaCameraLayout"
