--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -42,179 +42,185 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     android:id="@+id/entire_screen"
     android:orientation="vertical">
 
-  <!-- The first part of the screen (text and header). -->
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:orientation="vertical"
-      android:id="@+id/boringFTCStuff"
-      android:visibility="visible">
-
-    <!-- black bar on top -->
-    <RelativeLayout
-        android:id="@+id/top_bar"
-        android:layout_width="fill_parent"
-        android:layout_height="80dp"
-        android:background="@color/background_black">
-
-      <ImageView
-          android:id="@+id/robotIcon"
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          android:layout_margin="1dp"
-          android:adjustViewBounds="true"
-          android:src="@drawable/icon_robotcontroller" />
-
-      <TextView
-          android:id="@+id/textDeviceName"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_toEndOf="@id/robotIcon"
-          android:padding="8dp"
-          android:textAppearance="?android:attr/textAppearanceMedium"
-          android:textColor="?attr/textWhite"
-          android:textStyle="bold" />
-
-      <TextView
-          android:id="@+id/openftc_version"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_toEndOf="@+id/robotIcon"
-          android:layout_below="@id/textDeviceName"
-          android:textColor="?attr/textWhite"
-          android:textAppearance="?android:attr/textAppearanceMedium"
-          android:padding="8dp"
-          android:textStyle="bold"
-          tools:text="OpenFTC v1.0"
-          android:visibility="invisible" />
-
-      <ImageButton
-          android:id="@+id/menu_buttons"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_alignParentEnd="true"
-          android:layout_centerHorizontal="true"
-          android:layout_centerInParent="true"
-          android:layout_margin="10dp"
-          android:adjustViewBounds="true"
-          android:background="@android:color/transparent"
-          android:padding="15dp"
-          android:scaleType="fitXY"
-          android:src="@drawable/icon_menu" />
-
-    </RelativeLayout>
-    <!-- end of black bar -->
-
-    <include
-        android:id="@+id/included_header"
-        layout="@layout/header" />
-
-    <!-- Content for the robot controller screen. -->
-    <RelativeLayout
-        android:id="@+id/RelativeLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="250dp"
-        android:keepScreenOn="true"
-        android:paddingBottom="0dp"
-        android:paddingLeft="0dp"
-        android:paddingRight="0dp"
-        android:paddingTop="0dp">
-
-      <!-- The robot status text -->
-      <TextView
-          android:id="@+id/textNetworkConnectionStatus"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:text=""
-          android:visibility="invisible" />
-
-      <TextView
-          android:id="@+id/textRobotStatus"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_below="@+id/textNetworkConnectionStatus"
-          android:text=""
-          android:visibility="invisible" />
-
-      <TextView
-          android:id="@+id/textOpMode"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_below="@+id/textRobotStatus"
-          android:text=""
-          android:visibility="invisible" />
-      <!-- -->
-
-      <!-- When visible, the error message will overlay and thus partially
-           obscure part of the camera monitor. We make this trade off so as to
-           allow for a bigger camera monitor view in the common case when the
-           error is not in fact present
-        -->
-      <TextView style="@style/FtcTextViewStyleBold"
-          android:id="@+id/textErrorMessage"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_below="@+id/textOpMode"
-          android:text=""
-          android:textColor="?attr/textMediumDark" />
-
-      <TextView
-          android:id="@+id/textGamepad1"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_above="@+id/textGamepad2"
-          android:text=""
-          android:visibility="invisible" />
-
-      <TextView
-          android:id="@+id/textGamepad2"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_alignParentBottom="true"
-          android:text=""
-          android:visibility="invisible" />
-
-      <!-- invisible except when programming mode is activated from the DS -->
-      <TextView
-          android:id="@+id/textRemoteProgrammingMode"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:background="?attr/backgroundLight"
-          android:gravity="center"
-          android:text=""
-          android:textColor="?attr/textWhite"
-          android:textSize="40sp"
-          android:textStyle="bold"
-          android:visibility="invisible" />
-
-    </RelativeLayout>
-
-  </LinearLayout>
-
-  <!-- The frame layout for the OpenCV camera -->
-  <org.opencv.android.JavaCameraView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:visibility="gone"
-      android:focusable="false"
-      android:id="@+id/opencvJavaCameraView"
-      opencv:show_fps="true"
-      opencv:camera_id="any"/>
-
-  <!-- The Vuforia camera -->
   <FrameLayout
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:id="@+id/vuforiaCamParent"
-      android:visibility="gone">
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
 
+    <!-- The first part of the screen (text and header). -->
     <LinearLayout
-        android:id="@+id/vuforiaCameraLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:id="@+id/boringFTCStuff"
+        android:visibility="visible">
+
+      <!-- black bar on top -->
+      <RelativeLayout
+          android:id="@+id/top_bar"
+          android:layout_width="fill_parent"
+          android:layout_height="80dp"
+          android:background="@color/background_black">
+
+        <ImageView
+            android:id="@+id/robotIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="1dp"
+            android:adjustViewBounds="true"
+            android:src="@drawable/icon_robotcontroller" />
+
+        <TextView
+            android:id="@+id/textDeviceName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/robotIcon"
+            android:padding="8dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="?attr/textWhite"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/openftc_version"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/robotIcon"
+            android:layout_below="@id/textDeviceName"
+            android:textColor="?attr/textWhite"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:padding="8dp"
+            android:textStyle="bold"
+            tools:text="OpenFTC v1.0"
+            android:visibility="invisible" />
+
+        <ImageButton
+            android:id="@+id/menu_buttons"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
+            android:layout_margin="10dp"
+            android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
+            android:padding="15dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/icon_menu" />
+
+      </RelativeLayout>
+      <!-- end of black bar -->
+
+      <include
+          android:id="@+id/included_header"
+          layout="@layout/header" />
+
+      <!-- Content for the robot controller screen. -->
+      <RelativeLayout
+          android:id="@+id/RelativeLayout"
+          android:layout_width="fill_parent"
+          android:layout_height="250dp"
+          android:keepScreenOn="true"
+          android:paddingBottom="0dp"
+          android:paddingLeft="0dp"
+          android:paddingRight="0dp"
+          android:paddingTop="0dp">
+
+        <!-- The robot status text -->
+        <TextView
+            android:id="@+id/textNetworkConnectionStatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/textRobotStatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textNetworkConnectionStatus"
+            android:text=""
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/textOpMode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textRobotStatus"
+            android:text=""
+            android:visibility="invisible" />
+        <!-- -->
+
+        <!-- When visible, the error message will overlay and thus partially
+             obscure part of the camera monitor. We make this trade off so as to
+             allow for a bigger camera monitor view in the common case when the
+             error is not in fact present
+          -->
+        <TextView style="@style/FtcTextViewStyleBold"
+            android:id="@+id/textErrorMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textOpMode"
+            android:text=""
+            android:textColor="?attr/textMediumDark" />
+
+        <TextView
+            android:id="@+id/textGamepad1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/textGamepad2"
+            android:text=""
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/textGamepad2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:text=""
+            android:visibility="invisible" />
+
+        <!-- invisible except when programming mode is activated from the DS -->
+        <TextView
+            android:id="@+id/textRemoteProgrammingMode"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="?attr/backgroundLight"
+            android:gravity="center"
+            android:text=""
+            android:textColor="?attr/textWhite"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:visibility="invisible" />
+
+      </RelativeLayout>
+
+    </LinearLayout>
+
+    <!-- The frame layout for the OpenCV camera -->
+    <org.opencv.android.JavaCameraView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:focusable="false"
+        android:id="@+id/opencvJavaCameraView"
+        opencv:show_fps="true"
+        opencv:camera_id="any"/>
+
+    <!-- The Vuforia camera -->
+    <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical"
-        android:visibility="visible"
-        />
+        android:id="@+id/vuforiaCamParent"
+        android:visibility="gone">
+
+      <LinearLayout
+          android:id="@+id/vuforiaCameraLayout"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:orientation="vertical"
+          android:visibility="visible"
+          />
+
+    </FrameLayout>
 
   </FrameLayout>
 
